--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@udotcash/u-exchange-sdk",
+  "name": "@wzdmatl/u-exchange-sdk",
   "license": "MIT",
   "version": "1.1.0",
   "description": "🛠 An SDK for building applications on top of U.EXCHANGE.",
@@ -10,7 +10,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/antron3000/u-exchange-sdk.git"
+    "url": "git+https://github.com/wzdmatl/u-exchange-sdk.git"
   },
   "keywords": [
     "u-exchange",
